[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dex-client-okx-web3"
version = "0.1.0"
description = "OKX Web3 Reverse Client for browser-backed crypto market APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Client Maintainers" }]
dependencies = ["httpx>=0.27", "curl_cffi>=0.7"]
keywords = ["crypto", "dex", "reverse-engineered", "okx_web3"]
classifiers = ["Programming Language :: Python :: 3", "Typing :: Typed"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/bigidulka/dex-client-okx-web3"
Documentation = "https://bigidulka.github.io/dex-client-okx-web3/"
Repository = "https://github.com/bigidulka/dex-client-okx-web3"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_client_okx_web3"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
